; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/pci/pluto2/extr_pluto2.c_pluto_setsda.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/pci/pluto2/extr_pluto2.c_pluto_setsda.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pluto = type { i32 }

@REG_SLCS = common dso_local global i32 0, align 4
@SLCS_SDA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @pluto_setsda to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pluto_setsda(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.pluto*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.pluto*
  store %struct.pluto* %7, %struct.pluto** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load %struct.pluto*, %struct.pluto** %5, align 8
  %12 = load i32, i32* @REG_SLCS, align 4
  %13 = load i32, i32* @SLCS_SDA, align 4
  %14 = load i32, i32* @SLCS_SDA, align 4
  %15 = call i32 @pluto_rw(%struct.pluto* %11, i32 %12, i32 %13, i32 %14)
  br label %21

16:                                               ; preds = %2
  %17 = load %struct.pluto*, %struct.pluto** %5, align 8
  %18 = load i32, i32* @REG_SLCS, align 4
  %19 = load i32, i32* @SLCS_SDA, align 4
  %20 = call i32 @pluto_rw(%struct.pluto* %17, i32 %18, i32 %19, i32 0)
  br label %21

21:                                               ; preds = %16, %10
  ret void
}

declare dso_local i32 @pluto_rw(%struct.pluto*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
